--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,12 @@
 [submodule ".emacs.d/site-lisp/emacs-powerline"]
 	path = .emacs.d/site-lisp/emacs-powerline
 	url = git://github.com/jonathanchu/emacs-powerline.git
+[submodule ".emacs.d/site-lisp/auto-complete"]
+	path = .emacs.d/site-lisp/auto-complete
+	url = git://github.com/auto-complete/auto-complete.git
+[submodule ".emacs.d/site-lisp/popup-el"]
+	path = .emacs.d/site-lisp/popup-el
+	url = git://github.com/auto-complete/popup-el.git
+[submodule ".emacs.d/site-lisp/twittering-mode"]
+	path = .emacs.d/site-lisp/twittering-mode
+	url = git://github.com/hayamiz/twittering-mode.git
