--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule ".emacs.d/site-lisp/twittering-mode"]
 	path = .emacs.d/site-lisp/twittering-mode
 	url = https://github.com/hayamiz/twittering-mode.git
+[submodule ".emacs.d/site-lisp/vim-modeline"]
+	path = .emacs.d/site-lisp/vim-modeline
+	url = https://github.com/cinsk/emacs-vim-modeline.git
