emacs: GTFO nxhtml, web-mode yay!, update submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule ".emacs.d/site-lisp/sparql-mode"]
 	path = .emacs.d/site-lisp/sparql-mode
 	url = https://github.com/ljos/sparql-mode.git
+[submodule ".emacs.d/site-lisp/web-mode"]
+	path = .emacs.d/site-lisp/web-mode
+	url = https://github.com/fxbois/web-mode
