--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,3 @@
-[submodule ".emacs.d/site-lisp/emacs-color-theme-solarized"]
-	path = .emacs.d/site-lisp/emacs-color-theme-solarized
-	url = https://github.com/sellout/emacs-color-theme-solarized.git
-[submodule ".emacs.d/site-lisp/emacs-powerline"]
-	path = .emacs.d/site-lisp/emacs-powerline
-	url = https://github.com/jonathanchu/emacs-powerline.git
 [submodule ".emacs.d/site-lisp/auto-complete"]
 	path = .emacs.d/site-lisp/auto-complete
 	url = https://github.com/auto-complete/auto-complete.git
@@ -28,3 +22,9 @@
 [submodule ".emacs.d/site-lisp/less-css-mode"]
 	path = .emacs.d/site-lisp/less-css-mode
 	url = https://github.com/purcell/less-css-mode
+[submodule ".emacs.d/site-lisp/moe-theme-el"]
+	path = .emacs.d/site-lisp/moe-theme-el
+	url = https://github.com/kuanyui/moe-theme.el
+[submodule ".emacs.d/site-lisp/powerline"]
+	path = .emacs.d/site-lisp/powerline
+	url = https://github.com/milkypostman/powerline.git
