--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule ".emacs.d/site-lisp/pkgbuild-mode"]
 	path = .emacs.d/site-lisp/pkgbuild-mode
 	url = https://github.com/juergenhoetzel/pkgbuild-mode.git
+[submodule ".emacs.d/site-lisp/rust-mode"]
+	path = .emacs.d/site-lisp/rust-mode
+	url = https://github.com/rust-lang/rust-mode
