--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,12 @@
 [submodule ".emacs.d/site-lisp/org-reveal"]
 	path = .emacs.d/site-lisp/org-reveal
 	url = https://github.com/yjwen/org-reveal.git
+[submodule ".emacs.d/site-lisp/flycheck"]
+	path = .emacs.d/site-lisp/flycheck
+	url = https://github.com/flycheck/flycheck.git
+[submodule ".emacs.d/site-lisp/.emacs.d/site-lisp/dash-el"]
+	path = .emacs.d/site-lisp/dash-el
+	url = https://github.com/magnars/dash.el.git
+[submodule ".emacs.d/site-lisp/seq-el"]
+	path = .emacs.d/site-lisp/seq-el
+	url = https://github.com/NicolasPetton/seq.el.git
