--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule ".emacs.d/site-lisp/fuzzy-el"]
 	path = .emacs.d/site-lisp/fuzzy-el
 	url = https://github.com/auto-complete/fuzzy-el
+[submodule ".emacs.d/site-lisp/emacs-neotree"]
+	path = .emacs.d/site-lisp/emacs-neotree
+	url = https://github.com/jaypei/emacs-neotree.git
