--- a/.gitmodules
+++ b/.gitmodules
@@ -9,16 +9,16 @@
 	url = https://github.com/cinsk/emacs-vim-modeline.git
 [submodule ".emacs.d/site-lisp/web-mode"]
 	path = .emacs.d/site-lisp/web-mode
-	url = https://github.com/fxbois/web-mode
+	url = https://github.com/fxbois/web-mode.git
 [submodule ".emacs.d/site-lisp/emmet-mode"]
 	path = .emacs.d/site-lisp/emmet-mode
 	url = https://github.com/smihica/emmet-mode.git
 [submodule ".emacs.d/site-lisp/less-css-mode"]
 	path = .emacs.d/site-lisp/less-css-mode
-	url = https://github.com/purcell/less-css-mode
+	url = https://github.com/purcell/less-css-mode.git
 [submodule ".emacs.d/site-lisp/moe-theme-el"]
 	path = .emacs.d/site-lisp/moe-theme.el
-	url = https://github.com/kuanyui/moe-theme.el
+	url = https://github.com/kuanyui/moe-theme.el.git
 [submodule ".emacs.d/site-lisp/powerline"]
 	path = .emacs.d/site-lisp/powerline
 	url = https://github.com/milkypostman/powerline.git
@@ -27,7 +27,7 @@
 	url = https://github.com/defunkt/markdown-mode.git
 [submodule ".emacs.d/site-lisp/rust-mode"]
 	path = .emacs.d/site-lisp/rust-mode
-	url = https://github.com/rust-lang/rust-mode
+	url = https://github.com/rust-lang/rust-mode.git
 [submodule ".emacs.d/site-lisp/org-reveal"]
 	path = .emacs.d/site-lisp/org-reveal
 	url = https://github.com/yjwen/org-reveal.git
@@ -39,22 +39,28 @@
 	url = https://github.com/iqbalansari/emacs-emojify.git
 [submodule ".emacs.d/site-lisp/ht.el"]
 	path = .emacs.d/site-lisp/ht.el
-	url = https://github.com/Wilfred/ht.el
+	url = https://github.com/Wilfred/ht.el.git
 [submodule ".emacs.d/site-lisp/dash.el"]
 	path = .emacs.d/site-lisp/dash.el
-	url = https://github.com/magnars/dash.el
+	url = https://github.com/magnars/dash.el.git
 [submodule ".emacs.d/site-lisp/fringe-helper.el"]
 	path = .emacs.d/site-lisp/fringe-helper.el
-	url = https://github.com/nschum/fringe-helper.el
+	url = https://github.com/nschum/fringe-helper.el.git
 [submodule ".emacs.d/site-lisp/emacs-git-gutter"]
 	path = .emacs.d/site-lisp/emacs-git-gutter
-	url = https://github.com/syohex/emacs-git-gutter
+	url = https://github.com/syohex/emacs-git-gutter.git
 [submodule ".emacs.d/site-lisp/emacs-git-gutter-fringe"]
 	path = .emacs.d/site-lisp/emacs-git-gutter-fringe
-	url = https://github.com/syohex/emacs-git-gutter-fringe
+	url = https://github.com/syohex/emacs-git-gutter-fringe.git
 [submodule ".emacs.d/site-lisp/fuzzy-el"]
 	path = .emacs.d/site-lisp/fuzzy-el
-	url = https://github.com/auto-complete/fuzzy-el
+	url = https://github.com/auto-complete/fuzzy-el.git
 [submodule ".emacs.d/site-lisp/emacs-neotree"]
 	path = .emacs.d/site-lisp/emacs-neotree
 	url = https://github.com/jaypei/emacs-neotree.git
+[submodule ".oh-my-zsh-custom/plugins/zsh-autosuggestions"]
+	path = .oh-my-zsh-custom/plugins/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions.git
+[submodule ".oh-my-zsh-custom/plugins/zsh-syntax-highlighting"]
+	path = .oh-my-zsh-custom/plugins/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
