--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule ".emacs.d/site-lisp/ag.el"]
 	path = .emacs.d/site-lisp/ag.el
 	url = https://github.com/Wilfred/ag.el
+[submodule ".emacs.d/site-lisp/yaml-mode"]
+	path = .emacs.d/site-lisp/yaml-mode
+	url = https://github.com/yoshiki/yaml-mode
