--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,6 @@
 [submodule ".emacs.d/site-lisp/popup-el"]
 	path = .emacs.d/site-lisp/popup-el
 	url = https://github.com/auto-complete/popup-el.git
-[submodule ".emacs.d/site-lisp/vim-modeline"]
-	path = .emacs.d/site-lisp/vim-modeline
-	url = https://github.com/cinsk/emacs-vim-modeline.git
 [submodule ".emacs.d/site-lisp/web-mode"]
 	path = .emacs.d/site-lisp/web-mode
 	url = https://github.com/fxbois/web-mode.git
@@ -91,3 +88,18 @@
 [submodule ".emacs.d/site-lisp/editorconfig-emacs"]
 	path = .emacs.d/site-lisp/editorconfig-emacs
 	url = https://github.com/editorconfig/editorconfig-emacs
+[submodule ".emacs.d/site-lisp/emacs-doom-themes"]
+	path = .emacs.d/site-lisp/emacs-doom-themes
+	url = https://github.com/hlissner/emacs-doom-themes.git
+[submodule ".emacs.d/site-lisp/emacs-memoize"]
+	path = .emacs.d/site-lisp/emacs-memoize
+	url = https://github.com/skeeto/emacs-memoize.git
+[submodule ".emacs.d/site-lisp/spaceline"]
+	path = .emacs.d/site-lisp/spaceline
+	url = https://github.com/TheBB/spaceline.git
+[submodule ".emacs.d/site-lisp/all-the-icons.el"]
+	path = .emacs.d/site-lisp/all-the-icons.el
+	url = https://github.com/domtronn/all-the-icons.el.git
+[submodule ".emacs.d/site-lisp/spaceline-all-the-icons.el"]
+	path = .emacs.d/site-lisp/spaceline-all-the-icons.el
+	url = https://github.com/domtronn/spaceline-all-the-icons.el.git
