--- a/ghostty/config
+++ b/ghostty/config
@@ -6,7 +6,7 @@ selection-invert-fg-bg = true
 cursor-invert-fg-bg = true
 
 gtk-titlebar = false
-window-decoration = false
+#window-decoration = false
 background-opacity = 0.98
 
 font-size = 12
